--- a/Ejercicios/E7_MontaniaRusa/package.json
+++ b/Ejercicios/E7_MontaniaRusa/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dat.gui": "^0.7.9",
     "three": "^0.162.0"
   },
   "devDependencies": {
