--- a/Ejercicios/E7_MontaniaRusa/package.json
+++ b/Ejercicios/E7_MontaniaRusa/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dat.gui": "^0.7.9",
+    "stats.js": "^0.17.0",
     "three": "^0.162.0"
   },
   "devDependencies": {
