--- a/Ejercicios/E7_MontaniaRusa/package.json
+++ b/Ejercicios/E7_MontaniaRusa/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "template",
-  "version": "1.0.0",
+  "name": "TP Final Sistemas Graficos",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,8 @@
   "dependencies": {
     "dat.gui": "^0.7.9",
     "stats.js": "^0.17.0",
-    "three": "^0.162.0"
+    "three": "^0.162.0",
+    "three-good-godrays": "^0.7.1"
   },
   "devDependencies": {
     "vite": "^5.1.4"
